infrastructure/kube/master-scripts/yml/ingress/spark-webui-ingress.yml
#
# Copyright 2021 Merck & Co., Inc. Kenilworth, NJ, USA.
#
#	Licensed to the Apache Software Foundation (ASF) under one
#	or more contributor license agreements. See the NOTICE file
#	distributed with this work for additional information
#	regarding copyright ownership. The ASF licenses this file
#	to you under the Apache License, Version 2.0 (the
#	"License"); you may not use this file except in compliance
#	with the License. You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
#
#	Unless required by applicable law or agreed to in writing,
#	software distributed under the License is distributed on an
#	"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
#	KIND, either express or implied. See the License for the
#	specific language governing permissions and limitations
#	under the License.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-webui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /spark/
          backend:
            serviceName: dataprofiler-spark-webui
            servicePort: 8080
        - path: /spark/spark-webui
          backend:
            serviceName: dataprofiler-spark-webui
            servicePort: 8080
        - path: /spark/static
          backend:
            serviceName: dataprofiler-spark-webui
            servicePort: 8080
